syntax = "proto3";

package ihavefood;

option go_package =  "/genproto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "merchantservice.proto";
import "common.proto";

// ---------------------ORDER SERVICE------------------------------
// Manages place order process.
service OrderService {

    //  ListOrderHistory retrives Customer's place order history by CustomerID
    rpc ListOrderHistory(ListOrderHistoryRequest) returns (ListOrderHistoryResponse){
        option (google.api.http) = { get: "/api/orders/{customer_id}" };
    }

    // rpc GetPlaceOrder(id) returns(order){}

    // HandlePlaceOrder handle incoming order from client
    rpc HandlePlaceOrder(HandlePlaceOrderRequest) returns(PlaceOrder){
        option (google.api.http) = {
            post: "/api/orders/place_order" 
            body: "*"
        };
    }

}

message PlaceOrder {
    // A unique request ID for server to detect duplicated requests.
    string request_id = 1;
    string order_id = 2 ;
    string customer_id = 3;
    string merchant_id = 4;
    repeated MenuItem menu = 5;
    string coupon_code = 6;
    int32 coupon_discount =7;
    int32 delivery_fee = 8;
    int32 total = 9;
    Address customer_address = 10;
    Address merchant_address = 11;
    ContactInfo customer_contact = 12;
    PaymentMethods payment_methods = 13;
    PaymentStatus payment_status = 14;
    OrderStatus order_status = 15;
    OrderTimestamps order_timestamps = 16;
}

message ContactInfo {
    string phone_number = 1;
    string email = 2;
}

enum PaymentMethods {
    PAYMENT_METHOD_UNSPECIFIED = 0;
    PAYMENT_METHOD_CASH = 1;
    PAYMENT_METHOD_CREDIT_CARD = 2; 
    PAYMENT_METHOD_PROMPT_PAY = 3;
}

enum PaymentStatus {
    UNPAID = 0;
    PAID = 1;
}

enum OrderStatus {
    PENDING = 0;   
    PREPARING_ORDER =1;
    FINDING_RIDER =2;
    WAIT_FOR_PICKUP = 3; 
    ONGOING = 4;
    DELIVERED =5;
    CANCELLED =6;
}

message OrderTimestamps {
    google.protobuf.Timestamp create_time = 1;
    google.protobuf.Timestamp update_time = 2;
    google.protobuf.Timestamp complete_time = 3;
}

message ListOrderHistoryRequest {
    string customer_id = 1;
}

message ListOrderHistoryResponse {
    repeated PlaceOrder place_orders = 1;
}

message HandlePlaceOrderRequest {
    string request_id = 12;
    string customer_id = 1;
    string merchant_id = 2;
    repeated MenuItem menu = 3;
    string coupon_code = 4;
    int32 coupon_discount =5;
    int32 delivery_fee = 6;
    int32 total = 7;
    Address customer_address = 8;
    Address merchant_address = 9;
    ContactInfo customer_contact = 10;
    PaymentMethods payment_methods = 11;
}

